--- a/package.json
+++ b/package.json
@@ -6,12 +6,9 @@
     "server": "node ./server",
     "server:prod": "cross-env NODE_ENV=production node ./server"
   },
-  "dependencies": {
-    "@vitejs/plugin-react-refresh": "^1.3.3",
+  "devDependencies": {
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "vite": "^2.3.4",
     "vite-plugin-ssr": "0.1.0-beta.45"
   }
