--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
   },
   "dependencies": {
     "@nonphoto/bloom": "^1.0.3",
+    "goober": "^2.0.37",
+    "popmotion": "^9.3.6",
+    "projection": "^2.0.0-alpha.3",
     "s-js": "^0.4.9"
   }
 }
