--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cross-env": "^7.0.3",
     "express": "^4.17.1",
     "vite": "^2.3.4",
+    "vite-imagetools": "^3.6.8",
     "vite-plugin-ssr": "0.1.0-beta.45"
   },
   "dependencies": {
