--- a/package.json
+++ b/package.json
@@ -1,10 +1,7 @@
 {
   "scripts": {
-    "dev": "npm run server",
-    "prod": "npm run build && npm run server:prod",
-    "build": "vite build && vite build --ssr",
-    "server": "node ./server",
-    "server:prod": "cross-env NODE_ENV=production node ./server"
+    "start": "node ./server",
+    "build": "npx vite build && npx vite build --ssr && npx vite-plugin-ssr prerender"
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
